# samael

./: .envrc  .gitignore  CHANGELOG  CONTRIBUTORS  Cargo.toml  LICENSE  README.md  bindings.h  bindings.rs  devenv.nix  flake.nix
.cargo/: audit.toml
.github/: FUNDING.yml  bors.toml
.github/workflows/: deploy.yml  tests.yml
nix/: samael-env.nix
src/: attribute.rs  bindings.rs  crypto.rs  key_info.rs  lib.rs  rsa.rs  service_provider.rs  signature.rs  traits.rs  utils.rs
src/crypto/: cert_encoding.rs  crypto_disabled.rs  ids.rs  mod.rs  url_verification.rs  xmlsec.rs
src/crypto/native/: mod.rs  openssl_backend.rs  rustcrypto_backend.rs
src/crypto/rsa/: mod.rs  openssl.rs  rustcrypto.rs
src/crypto/x509/: mod.rs  openssl.rs  rustcrypto.rs
src/crypto/xmlsec/: mod.rs
src/crypto/xmlsec/wrapper/: backend.rs  bindings.rs  keys.rs  mod.rs  xmldsig.rs  xmlsec_internal.rs
src/crypto/xmlsec/xmlsec/: keys.rs  mod.rs  xmldsig.rs  xmlsec_internal.rs
src/idp/: authentication_context_class.rs  error.rs  mod.rs  response_builder.rs  sp_extractor.rs  tests.rs  verified_request.rs
src/metadata/: affiliation_descriptor.rs  attribute_consuming_service.rs  contact_person.rs  encryption_method.rs  endpoint.rs  entity_descriptor.rs  helpers.rs  key_descriptor.rs  localized.rs  mod.rs  organization.rs  sp_sso_descriptor.rs
src/schema/: assertion.rs  authn_request.rs  conditions.rs  encrypted_assertion.rs  extensions.rs  issuer.rs  mod.rs  name_id.rs  name_id_policy.rs  requested_authn_context.rs  response.rs  subject.rs
src/schema/encrypted_assertions/: encrypted_assertion.rs  encrypted_data.rs  encrypted_key.rs  encryption_cipher_data.rs  encryption_cipher_value.rs  encryption_key_info.rs  encryption_method.rs  mod.rs
src/service_provider/: mod.rs  tests.rs
src/xmlsec/: backend.rs  error.rs  keys.rs  mod.rs  xmldsig.rs  xmlsec.rs
test_vectors/: README.md  authn_request.xml  authn_request_sign_template.xml  cert.pem  ec_cert.der  ec_cert.pem  ec_csr.pem  ec_private.der  ec_private.pem  ec_public.pem  idp_2_metadata.xml  idp_2_metadata_public.pem  idp_cert.der  idp_ecdsa_metadata.xml  idp_metadata.xml  idp_metadata_nested.xml  idp_metadata_realworld.xml  idp_private_key.der  idp_request_signature.txt  logout_request.xml  logout_response.xml  multi_saml_response.sh  multi_saml_response_signed.xml  multi_saml_response_signed_2.xml  multi_saml_response_template.xml  preview-renater-imt-metadata.xml  private.der  private.pem  public.der  public.pem  public_key.der  response.xml  response_encrypted.xml  response_encrypted_aes192_cbc.xml  response_encrypted_aes192_gcm.xml  response_encrypted_aes256_cbc.xml  response_encrypted_aes256_gcm.xml  response_encrypted_valid_aes192_cbc.xml  response_encrypted_valid_aes192_gcm.xml  response_encrypted_valid_aes256_cbc.xml  (+12 more)
test_vectors/sp_keys/: sp_cert.pem  sp_private_key.pem
tests/: load_entities_descriptor.rs  sp_metadata.rs
