[package]
name = "samael"
version = "0.0.20"
authors = ["Nathan Jaremko <nathan@jaremko.ca>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/njaremko/samael"
description = "A SAML2 library for Rust"
keywords = ["saml", "saml2", "xml", "sso"]
categories = ["authentication"]
build = "bindings.rs"

[lib]
# Disabling doctests because they cause nix build check phase to fail
doctest = false
crate-type = ["staticlib", "rlib"]

[features]
default = ["openssl", "xmlsec"]
# Native key/cert/url crypto backend using the OpenSSL crate.
openssl = ["dep:openssl", "dep:openssl-sys", "dep:openssl-probe"]
# Native key/cert/url crypto backend using pure-Rust RustCrypto crates.
# Mutually exclusive with `openssl`.
rustcrypto = [
    "dep:rsa",
    "dep:sha2",
    "dep:p256",
    "dep:x509-cert",
    "dep:signature",
    "dep:rand_core",
    "dep:getrandom",
]
# XML digital signature support via libxmlsec1. Requires the OpenSSL backend
# (the xmlsec wrapper uses OpenSSL for assertion decryption).
xmlsec = ["openssl", "libc", "lazy_static", "libxml"]

[build-dependencies]
pkg-config = "^0.3.17"
bindgen = "^0.72.1"

[dependencies]
# openssl backend (optional)
openssl = { version = "^0.10.0", optional = true }
openssl-sys = { version = "^0.9.0", optional = true }
openssl-probe = { version = "^0.1.2", optional = true }

# rustcrypto backend (optional)
rsa = { version = "0.10.0-rc.18", features = ["sha2"], optional = true }
sha2 = { version = "0.11.0-rc.4", optional = true }
p256 = { version = "0.14.0-rc.10", features = ["ecdsa", "pem"], optional = true }
x509-cert = { version = "0.3.0-rc.4", features = ["builder", "pem", "std"], optional = true }
signature = { version = "3.0.0-rc.10", optional = true }
rand_core = { version = "0.10.0", optional = true }
getrandom = { version = "0.3", optional = true }

url = "^2.1.1"
quick-xml = { version = "^0.37.2", features = ["serialize"] }
serde = { version = "^1.0.0", features = ["derive"] }
chrono = { version = "^0.4.0", features = ["serde"] }
base64 = "^0.22.0"
flate2 = "^1.0.0"
rand = "^0.9.0"
derive_builder = "^0.20.0"
libxml = { version = "=0.3.3", optional = true }
uuid = { version = "^1.3.0", features = ["v4"] }
data-encoding = "2.9.0"
libc = { version = "^0.2.66", optional = true }
lazy_static = { version = "^1.4.0", optional = true }
thiserror = "^2.0.11"
